--- a/blocks/content/video/__iframes/video__iframes.css
+++ b/blocks/content/video/__iframes/video__iframes.css
@@ -1,5 +1,5 @@
-.description {
+.video__iframes {
   display: flex;
   justify-content: center;
-  margin: 100px 0 100px;
+  margin: 50px auto -50px;
 }
