--- a/pages/index.css
+++ b/pages/index.css
@@ -7,3 +7,6 @@
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/cards/cards.css);
+@import url(../blocks/content/video/video.css);
+@import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/content/oakley/oakley.css);
