--- a/blocks/content/digits/digits.css
+++ b/blocks/content/digits/digits.css
@@ -1,13 +1,14 @@
 .digits {
   position: relative;
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 .table {
   display: flex;
   justify-content: space-between;
   width: 1100px;
-  margin: 60px auto 100px;
+  margin: 60px auto 0px;
   flex-wrap: wrap;
   list-style: none;
   padding: 0;
