--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -2,3 +2,7 @@
 @import url(../content/digits/digits.css);
 @import url(../content/feynman/feynman.css);
 @import url(../content/kaufman/kaufman.css);
+@import url(../content/oakley/oakley.css);
+@import url(../content/khan/khan.css);
+@import url(../content/techniques/techniques.css);
+@import url(../content/video/video.css);
