--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -6,3 +6,4 @@
 @import url(../content/khan/khan.css);
 @import url(../content/techniques/techniques.css);
 @import url(../content/video/video.css);
+@import url(../content/resources/resources.css);
