--- a/blocks/content/feynman/feynman.css
+++ b/blocks/content/feynman/feynman.css
@@ -3,7 +3,7 @@
   position: relative;
   height: 790px;
   background-color: #F2F2F2;
-  z-index: -2;
+  z-index: 0;
 }
 
 .feynman__title {
@@ -35,6 +35,11 @@
   font-size: 36px;
   font-weight: normal;
   color: #2F80ED;
+  transition: opacity 0.9s ease-in-out;
+}
+
+.feynman__link:hover {
+  opacity: 0.5;
 }
 
 .feynman__image {
