--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,7 +6,7 @@
   display: flex;
   position: relative;
   background-color: #F2F2F2;
-  z-index: -2;
+  z-index: 0;
   overflow: hidden;
  /* parameters for the header section */
 }
@@ -45,12 +45,18 @@
   font-size: 18px;
   font-weight: normal;
   color: #2F80ED;
+  transition: opacity 0.9s ease-in-out;
+}
+
+.header__link:hover {
+  opacity: 0.5;
 }
 
 .header__main-illustration {
   width: 756px;
   height: 608px;
   position: absolute;
+  z-index: 2;
   bottom: 0;
   right: 0;
 }
@@ -59,7 +65,7 @@
   height: 568px;
   width: 568px;
   background-color: #2F80ED;
-  z-index: -1;
+  z-index: 1;
   position: absolute;
   right: 0;
   top: 64px;
