--- a/blocks/content/khan/__buy-link/khan__buy-link.css
+++ b/blocks/content/khan/__buy-link/khan__buy-link.css
@@ -5,6 +5,7 @@
   color: #2F80ED;
   padding-left: 48px;
   transition: opacity 0.9s ease-in-out;
+  text-decoration: none;
 }
 
 .khan__buy-link:hover {
