--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -46,6 +46,7 @@
   font-weight: normal;
   color: #2F80ED;
   transition: opacity 0.9s ease-in-out;
+  text-decoration: none;
 }
 
 .header__link:hover {
