--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,28 @@
 @import url(../styles/normalize.css);
 @import url(../blocks/content/content.css);
+@import url(../blocks/content/khan/__author/khan__author.css);
+@import url(../blocks/content/khan/__book-container/khan__book-container.css);
+@import url(../blocks/content/khan/__book-pic/khan__book-pic.css);
+@import url(../blocks/content/khan/__buy-link/khan__buy-link.css);
+@import url(../blocks/content/khan/__container/khan__container.css);
+@import url(../blocks/content/khan/__quote-author-subline/khan__quote-author-subline.css);
+@import url(../blocks/content/khan/__quote-author/khan__quote-author.css);
+@import url(../blocks/content/khan/__quote/khan__quote.css);
+@import url(../blocks/content/khan/__title/khan__title.css);
+@import url(../blocks/content/resources/__logo-zone/resources__logo-zone.css);
+@import url(../blocks/content/resources/__logo/resources__logo.css);
+@import url(../blocks/content/video/__iframe/video__iframe.css);
+@import url(../blocks/content/video/__iframe/video__iframe_margin-left.css);
+@import url(../blocks/content/video/__iframes/video__iframes.css);
+@import url(../blocks/content/description/description.css);
+@import url(../blocks/content/digits/digits.css);
+@import url(../blocks/content/feynman/feynman.css);
+@import url(../blocks/content/kaufman/kaufman.css);
+@import url(../blocks/content/oakley/oakley.css);
+@import url(../blocks/content/khan/khan.css);
+@import url(../blocks/content/techniques/techniques.css);
+@import url(../blocks/content/video/video.css);
+@import url(../blocks/content/resources/resources.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/root/root.css);
@@ -7,4 +30,14 @@
 @import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/cards/cards.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__item/cards__item.css);
+@import url(../blocks/cards/__item/cards__item_no-margin.css);
+@import url(../blocks/cards/__title/cards__title.css);
+@import url(../blocks/cards/__description/cards__description.css);
 @import url(../blocks/two-columns/two-columns.css);
+@import url(../blocks/two-columns/__brief/two-columns__brief.css);
+@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
+@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
+@import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
+
